[gd_scene load_steps=2 format=3 uid="uid://b8v3g4exip626"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_fm6wt"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fm6wt")

[node name="PauseOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="Paused" type="Label" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -81.0
offset_top = 100.0
offset_right = 81.0
offset_bottom = 161.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 42
text = "Paused"
uppercase = true

[node name="CurrentLevelLabel" type="Label" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -160.0
offset_bottom = -134.0
grow_horizontal = 2
grow_vertical = 2
text = "Current Level %s"
horizontal_alignment = 1

[node name="ReturnToMainMenu" type="Button" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -110.0
offset_right = 107.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Return to Main Menu"

[node name="ResumeGame" type="Button" parent="PauseOverlay"]
layout_mode = 0
offset_left = 533.0
offset_top = 370.0
offset_right = 747.0
offset_bottom = 470.0
text = "Resume Game"
